syntax = "proto3";

package video;

option go_package = "video-service/proto/video";

import "google/protobuf/timestamp.proto";

message Video {
    string id = 1;
    string user_id = 2;
    string title = 3;
    string description = 4;
    string video_url = 5;
    string thumbnail_url = 6;
    int32 duration = 7;
    int64 view_count = 8;
    int64 like_count = 9;
    int64 share_count = 10;
    bool is_public = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp updated_at = 13;
}

message CreateVideoRequest {
    string user_id = 1;
    string title = 2;
    string description = 3;
    string video_url = 4;
    string thumbnail_url = 5;
    int32 duration = 6;
    bool is_public = 7;
}

message CreateVideoResponse {
    Video video = 1;
}

message GetVideoRequest {
    string id = 1;
}

message GetVideoResponse {
    Video video = 1;
}

message ListVideosRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message ListVideosResponse{
    repeated Video videos = 1;
    int64 total = 2;
}

message GetVideosByUserRequest{
    string user_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetVideosByUserResponse {
    repeated Video videos = 1;
    int64 total = 2;
}

message UpdateVideoRequest {
    string id = 1;
    string title = 2;
    string description = 3;
    string thumbnail_url = 4;
    bool is_public = 5;
}

message UpdateVideoResponse {
    Video video = 1;
}

message DeleteVideoRequest{
    string id = 1;
}

message DeleteVideoResponse {
    bool success = 1;
}

message LikeVideoRequest {
    string user_id = 1;
    string video_id = 2;
}

message LikeVideoResponse {
    bool success = 1;
    int64 like_count = 2;
}

message UnlikeVideoRequest {
    string user_id = 1;
    string video_id = 2;
}

message UnlikeVideoResponse {
    bool success = 1;
    int64 like_count = 2;
}

message CheckUserLikedVideoRequest {
    string user_id = 1;
    string video_id = 2;
}

message CheckUserLikedVideoResponse {
    bool is_liked = 1;
}

message GetVideoLikeCountRequest {
    string video_id = 1;
}

message GetVideoLikeCountResponse {
    int64 like_count = 1;
}

message CreateViewRequest{
    string user_id = 1;
    string video_id = 2;
    int32 watch_time = 3;
}

message CreateViewResponse{
    bool success = 1;
    int64 total_views = 2;
}

service VideoService {
    rpc CreateVideo(CreateVideoRequest) returns (CreateVideoResponse);
    rpc GetVideo(GetVideoRequest) returns (GetVideoResponse);
    rpc ListVideos(ListVideosRequest) returns (ListVideosResponse);
    rpc GetVideosByUser(GetVideosByUserRequest) returns (GetVideosByUserResponse);
    rpc UpdateVideo(UpdateVideoRequest) returns (UpdateVideoResponse);
    rpc DeleteVideo(DeleteVideoRequest) returns (DeleteVideoResponse);
    rpc LikeVideo(LikeVideoRequest) returns (LikeVideoResponse);
    rpc UnlikeVideo(UnlikeVideoRequest) returns (UnlikeVideoResponse);
    rpc CheckUserLikedVideo(CheckUserLikedVideoRequest) returns (CheckUserLikedVideoResponse);
    rpc GetVideoLikeCount(GetVideoLikeCountRequest) returns (GetVideoLikeCountResponse);
    rpc CreateView(CreateViewRequest) returns (CreateViewResponse);
}
